kubernetes/otp-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otp-service
  namespace: quick-haul
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otp-service
  template:
    metadata:
      labels:
        app: otp-service
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - otp-service
              topologyKey: "kubernetes.io/hostname"
      
      containers:
      - name: otp-service
        image: sathvik2003/quickhaul-otp:v2
        command: ["uvicorn", "services.otp_service.app:app", "--host", "0.0.0.0", "--port", "8005"]
        
        livenessProbe:
          httpGet:
            path: /
            port: 8005
          initialDelaySeconds: 30
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 8005
          initialDelaySeconds: 10
          periodSeconds: 10

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        ports:
        - containerPort: 8005
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 5"]
