kubernetes/otp-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otp-service
  namespace: quick-haul
spec:
  type: ClusterIP
  ports:
  - port: 8005
    targetPort: 8005
  selector:
    app: otp-service
